--- a/config
+++ b/config
@@ -34,7 +34,7 @@ default_border pixel
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty 
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -45,7 +45,7 @@ bindsym $mod+d exec rofi -show run
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+n exec firefox-esr
+bindsym $mod+n exec firefox
 
 # change focus
 bindsym $mod+j focus left
@@ -168,8 +168,25 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# You can also use any non-zero value if you'd like to have a border
+for_window [class=".*"] border pixel 0
+
+# Gaps settings
+gaps inner 4
+gaps outer 2
+
+
+# Only enable gaps on a workspace when there is at least one container
+smart_gaps on
+
+# Activate smart borders (always)
+smart_borders on
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+       status_command i3blocks
 }
+
+exec_always feh --bg-scale ~/Imágenes/Wallpapers/cabana.jpeg &
+exec_always compton -o 1 -i 0.9 & 
