--- a/config
+++ b/config
@@ -40,7 +40,8 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run
+bindsym $mod+Shift+d exec rofi -show run
+bindsym $mod+d exec rofi -show drun
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -188,5 +189,5 @@ bar {
        status_command i3blocks
 }
 
-exec_always feh --bg-scale ~/Imágenes/Wallpapers/cabana.jpeg &
+exec_always feh --bg-scale ~/Imágenes/Wallpapers/fondoLuna.jpg &
 exec_always compton -o 1 -i 0.9 & 
