--- a/config
+++ b/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 10
+font pango:monospace 12
 
 # Hide borders
 hide_edge_borders both
@@ -47,6 +47,7 @@ bindsym $mod+d exec rofi -show drun
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+n exec firefox
+bindsym $mod+Shift+p exec firefox --private
 
 # change focus
 bindsym $mod+j focus left
@@ -186,8 +187,15 @@ smart_borders on
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-       status_command i3blocks
+#       status_command i3blocks
+#	status_command i3status
+	font pango:Inconsolata 8  
+	position top 
+	status_command ~/Utilities/bumblebee-status/bumblebee-status \
+		-m nic cpu memory date time amixer \
+		-p time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
+		-t dracula-powerline
 }
 
-exec_always feh --bg-scale ~/Imágenes/Wallpapers/fondoLuna.jpg &
+exec_always feh --bg-scale ~/Imágenes/Wallpapers/font_algar.jpg &
 exec_always compton -o 1 -i 0.9 & 
