--- a/config
+++ b/config
@@ -142,6 +142,9 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# lock and suspend
+bindsym $mod+ctrl+l exec i3lock -c 000000
+bindsym $mod+ctrl+s exec i3lock -c 000000 && systemctl suspend
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
